testsuite/poke.pkl/acons-diag-7.pk
/* { dg-do compile } */

type Array = struct {};

var a
  = Array (23); /* { dg-error "invalid type" } */
